--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
 
 .btn-primary {
@@ -19,13 +20,13 @@
     font-size: 35px;
 }
 
-hr{
+hr {
     opacity: .4;
 }
 
 .banner-container {
-   background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.7)), url(../images/donation1.jpg);
-    
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url(../images/donation1.jpg);
+
     height: 100vh;
     width: 100%;
     background-repeat: no-repeat;
@@ -80,7 +81,6 @@ hr{
 .money-btn {
     padding: 15px 20px;
     margin-left: 8px;
-
 }
 
 .color {
@@ -109,24 +109,28 @@ hr{
 }
 
 .card-section {
-    padding: 20px 220px;
-
-    display: flex;
-    gap: 25px;
+    
+        padding: 20px 220px;
+    
+        display: flex;
+        gap: 55px;
+    
 }
 
 .card {
     padding: 10px 15px;
     width: 250px;
-    height: 200px;
+    height: 280px;
     background-color: rgba(105, 173, 176, 0.253);
     border-radius: 5px;
     justify-content: center;
 }
-.card-heading{
+
+.card-heading {
     font-family: 'Poppins', sans-serif;
     font-weight: bolder;
 }
+
 .card-2 {
     background-color: rgba(175, 60, 156, 0.63);
 }
@@ -143,7 +147,7 @@ hr{
 /* lives-container */
 
 .lives-container {
-    padding: 25px 120px;
+    padding: 25px 150px;
     margin-bottom: 25px;
     display: flex;
     gap: 40px;
@@ -151,7 +155,7 @@ hr{
 }
 
 .lives-disc {
-    padding: 20px 120px;
+    padding: 20px 10px;
 
 }
 
@@ -179,54 +183,52 @@ hr{
 }
 
 /* update-container */
-.update-container{
+.update-container {
     margin-top: 45px;
     padding: 5px 300px;
 }
-.update-container p{
+
+.update-container p {
     padding: 25px 10px;
     text-align: center;
-   
+
 }
 
 /* form */
-.form{
+.form {
     text-align: center;
     background-color: antiquewhite;
     padding: 40px 50px;
     margin-bottom: 50px;
     border-radius: 5px;
 }
-.email-input{
-  padding: 15px 40px;
-  border: none;
-   background-color: rgba(128, 128, 128, 0.492);
-   border-radius:5px 0px 0px 5px ;
+
+.email-input {
+    padding: 15px 40px;
+    border: none;
+    background-color: rgba(128, 128, 128, 0.492);
+    border-radius: 5px 0px 0px 5px;
+    color: white;
 }
-.buttom{
+
+.buttom {
     padding: 15px 40px;
     border: none;
     background-color: rgba(255, 0, 0, 0.715);
-    border-radius:0px 5px 5px 0px ;
+    border-radius: 0px 5px 5px 0px;
 }
+
 /* footer */
-footer{
+footer {
     background-color: black;
     padding: 20px 250px;
     color: white;
     text-align: center;
 }
-footer h1{
+
+footer h1 {
     font-size: 2.5rem;
     padding: 25px 2px;
     font-family: 'Lobster', cursive;
     color: orangered;
 }
-
-/* echo "# new-folder" >> README.md
-git init
-git add README.md
-
-
-
- */
