--- a/style/resonsive.css
+++ b/style/resonsive.css
@@ -54,10 +54,9 @@
 }
 
 .card-section {
-    /* display: grid;
+    display: grid;
     grid-template-columns: repeat(1, 1fr);
-    padding: 5% 1%; */
-
+    padding: 5% 1%; 
 }
 
 .card {
