--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,9 @@ hr {
 }
 
 /* our-donate-plane */
-.our-donate-plane {}
+.our-donate-plane {
+    margin: 0 auto;
+}
 
 .our-donate-plane>p {
     width: 40%;
@@ -111,7 +113,7 @@ hr {
 .card-section {
 
     padding: 20px 220px;
-
+    justify-content: center;
     display: flex;
     gap: 55px;
 
@@ -132,7 +134,7 @@ hr {
 }
 
 .card-2 {
-    background-color: rgba(175, 60, 156, 0.63);
+    background-color: rgba(80, 172, 152, 0.662);
 }
 
 .card-3 {
@@ -177,8 +179,9 @@ hr {
 }
 
 .lives-container img {
-    width: 450px;
-    height: 400px;
+    width: 95%;
+    
+    height: auto;
     border-radius: 10px;
 }
 
